<resources>

    <string name="title">Health Application</string>

    <string name="title_view_sensor_data">Records History</string>
    <string name="title_send_to_doctor">Send Records To Doctor</string>
    <string name="title_view_suggestions">Suggestions</string>
    <string name="title_view_requests">Patient Requests</string>
    <string name="title_comments">Feedback</string>

    <string name="app_name">HealthApplication</string>
    <string name="signup1">Patient Signup</string>
    <string name="signup2">Doctor Signup</string>
    <string name="patientsignup">Patient Signup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pid">Patient ID</string>
    <string name="contact">Contact No</string>
    <string name="doctor">Doctor</string>
    <string name="mailid">Email ID</string>
    <string name="ip">IP Address</string>
    <string name="connect">Connect</string>
    <string name="doctorlogin">Doctor Login</string>
    <string name="patientlogin">Patient Login</string>
    <string name="doctorsignup">Doctor Signup</string>
    <string name="signup">Sign up</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="login2">Doctor Login</string>
    <string name="login1">Patient Login</string>
    <string name="signin">Sign in</string>
    <string name="sensor">View Sensor Data</string>
    <string name="suggestion">View Suggestions</string>
    <string name="logout">Logout</string>
    <string name="patientscreen">Patient</string>
    <string name="doctorscreen">Doctor</string>
    <string name="doctorname">Doctor Name</string>
    <string name="image">Upload File</string>
    <string name="send">Send to Doctor</string>
    <string name="send_patient">Send to Patient</string>
    <string name="viewrequest">View Requests</string>
    <string name="comment">Comments</string>
    <string name="specialistlogin">Specialist Login</string>
    <string name="specialistsignup">Specialist Signup</string>
    <string name="specialistscreen">Specialist</string>
    <string name="sendToSpecialist">Send to Specialist</string>

    <string name="returnToRecords">Return to Requests</string>

    <string name="base_url">http://192.168.250.9:8080/</string>

    <string name="login_url">login</string>
    <string name="signup_url">signup</string>

    <string name="doctor_base_url">api/doctor/</string>
    <string name="patient_base_url">api/patient/</string>
    <string name="specialist_base_url">api/specialist/</string>
    <string name="device_data_url">api/devicedata/getdevicedatabypatientid</string>
    <string name="send_to_doctor">api/patientreport/add</string>
    <string name="view_requests">api/patientreport/getbydoctor</string>
    <string name="view_specialist_requests">api/patientreport/getbyspecialist</string>

    <string name="view_comments">api/comments/get</string>
    <string name="send_comments">api/comments/add</string>

    <string name="send_to_specialist">api/patientreport/update</string>

    <string name="family_doctor">Family Doctor</string>
    <string name="family_specialist">Specialist</string>
</resources>
