<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SpecialistScreenActivity">

    <include
        android:id="@+id/toolbarSpecialistScreen"
        layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@android:dimen/notification_large_icon_height">

        <ImageView
            android:id="@+id/mobiIcon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/patient" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/specialistscreen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/viewrequestSpecialist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewrequest" />

        <Button
            android:id="@+id/logoutSpecialist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>